fix serializers error output
